# forager-test-task

./: README.md  pyproject.toml  setup.cfg
data_manager/: __init__.py  interface.py  manager.py
processors/: __init__.py  email_processor.py
sdk/: __init__.py  api_routes.py  client.py  config.py  data_manager.py  email_validator.py  exceptions.py  filter.py  handle_response.py  models.py  requester.py  typings.py
sdk/api_client/: __init__.py  api_routes.py  client.py  requester.py
sdk/api_client/models/: __init__.py  api_call_dto.py
sdk/api_client/models/request_dto/: base_params.py  base_payload.py  params.py
sdk/api_client/models/response_dto/: __init__.py  domain_search_dto.py  verify_email_dto.py
sdk/exceptions/: api_errors.py  data_manager_errors.py
sdk/filter/: base_filter.py  email_filters.py
sdk/models/: __init__.py  api_call_dto.py  domain_search_models.py  verify_email_models.py
sdk/models/request_dto/: __init__.py  params.py
sdk/models/response_dto/: base_response_dto.py  domain_search_dto.py  verify_email_dto.py
