[tool.poetry]
name = "forager-task"
version = "0.1.0"
description = ""
authors = ["AlexandrZhydyk <zhydykalex@ukr.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
wemake-python-styleguide = "^0.18.0"
python-dotenv = "^1.0.0"
pydantic = "^2.5.3"
mypy = "^1.8.0"
types-requests = "^2.31.0.20231231"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
